feat: Introduce GitHub Actions workflow and script to verify Minecraft wiki data with Gemini.

--- a/.github/workflows/verify-data.yml
+++ b/.github/workflows/verify-data.yml
@@ -45,7 +45,7 @@ jobs:
       - name: Run verification
         id: verify
         env:
-          PERPLEXITY_API_KEY: ${{ secrets.PERPLEXITY_API_KEY }}
+          GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
           cd .github/scripts
           node verify-data.js --files ../../changed_files.txt --output ../../verification_report.md
