--- a/.github/workflows/verify-data.yml
+++ b/.github/workflows/verify-data.yml
@@ -9,7 +9,7 @@ jobs:
   verify-data:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       pull-requests: write
     
     steps:
@@ -39,8 +39,48 @@ jobs:
           cd .github/scripts
           npm install
 
-      - name: Run verification
+      - name: Validate format (syntax + structure)
+        id: format
+        run: |
+          cd .github/scripts
+          node validate-format.js --output ../../format_report.md --status ../../format_status.txt
+          
+          # Read the status
+          if [ -f ../../format_status.txt ]; then
+            STATUS=$(cat ../../format_status.txt)
+            echo "status=$STATUS" >> $GITHUB_OUTPUT
+          else
+            echo "status=no_issues" >> $GITHUB_OUTPUT
+          fi
+
+      - name: Post format errors and stop (if format issues)
+        if: steps.format.outputs.status == 'has_issues'
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const fs = require('fs');
+            let report = '## ❌ Format Validation Failed\n\n';
+            
+            if (fs.existsSync('format_report.md')) {
+              report += fs.readFileSync('format_report.md', 'utf8');
+            }
+            
+            report += '\n\n---\n*Please fix the format/syntax issues above before the data can be verified.*';
+            
+            await github.rest.pulls.createReview({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.issue.number,
+              body: report,
+              event: 'REQUEST_CHANGES'
+            });
+            
+            // Fail the workflow
+            core.setFailed('Format validation failed');
+
+      - name: Run Gemini verification (only if format passes)
         id: verify
+        if: steps.format.outputs.status == 'no_issues'
         env:
           GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
         run: |
@@ -85,7 +125,7 @@ jobs:
               event: 'REQUEST_CHANGES'
             });
 
-      - name: Comment on PR (if no issues)
+      - name: Comment and Auto-merge PR (if no issues)
         if: steps.verify.outputs.status == 'no_issues'
         uses: actions/github-script@v7
         with:
@@ -99,10 +139,32 @@ jobs:
               report += 'All data entries have been verified successfully!';
             }
             
-            // Simple comment - no review/request changes
+            report += '\n\n🚀 **Auto-merging this PR...**';
+            
+            // Post success comment
             await github.rest.issues.createComment({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.issue.number,
               body: report
             });
+            
+            // Auto-merge the PR using squash merge
+            try {
+              await github.rest.pulls.merge({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: context.issue.number,
+                merge_method: 'squash'
+              });
+              console.log('PR merged successfully!');
+            } catch (error) {
+              console.log('Auto-merge failed:', error.message);
+              // Post a comment about the failure
+              await github.rest.issues.createComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.issue.number,
+                body: `⚠️ Auto-merge failed: ${error.message}\n\nPlease merge manually.`
+              });
+            }
